section-cuteness-content fix

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8" />
@@ -44,10 +44,10 @@
 			<div class="ccontainer">
 				<h2>Her cuteness is on another level to the point where she is the paired word to the definition of perfect.</h2>
 				<div class="img-container">
-					<img src="css/imgs/searchbarhibiki.png" />
+					<img src="css/imgs/searchbarhibiki.PNG" />
 				</div>
 				<div class="img-container">
-					<img src="css/imgs/perfect.png" />
+					<img src="css/imgs/perfect.PNG" />
 				</div>
 			</div>
 		</div>
