--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 			<div class="ccontainer">
 				<h2>Her cuteness is on another level to the point where she is the paired word to the definition of perfect.</h2>
 				<div class="img-container">
-					<img src="css/imgs/searchbarhibiki.PNG" />
+					<img src="css/imgs/searchbarhibiki.jpg" />
 				</div>
 				<div class="img-container">
-					<img src="css/imgs/perfect.PNG" />
+					<img src="css/imgs/perfect.jpg" />
 				</div>
 			</div>
 		</div>
