Hibiki Site -> Main Site

--- a/index.html
+++ b/index.html
@@ -1,129 +1,132 @@
-﻿<!DOCTYPE html>
+﻿<!-- Real Site -->
+<!-- Home Page -->
+<!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link href="https://fonts.googleapis.com/css?family=Signika" rel="stylesheet">
-	<link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
-	<link type="text/css" rel="stylesheet" href="css/main.css" media="screen,projection" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="description" content="All about Jadefen Midori" />
+    <meta name="keywords" content="kpop, Jadefen, gaming, anime" />
+    <meta name="author" content="Nicholas Pangilinan (Jadefen Midori)" />
+    <title>Jadefen Midori | Welcome</title>
+    <link rel="stylesheet" href="./css/home.css" />
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans|Sarabun" rel="stylesheet">
 </head>
 <body>
-		<nav class="navbar blue lighten-5">
-			<div class="nav-wrapper">
-				<div class="container">
-					<a href="#" class="brand-logo right">Hibiki Paradise</a>
-					<ul id="nav-mobile" class="left hide-on-med-and-down">
-						<li><a href="#section-divider-1" class=" light-blue-text text-darken-4">Cuteness</a></li>
-						<li><a href="#section-divider-2" class=" light-blue-text text-darken-4">Color</a></li>
-						<li><a href="#section-divider-3" class=" light-blue-text text-darken-4">Voice</a></li>
-					</ul>
-				</div>
-			</div>
-		</nav>
-		<div class="section" id="title-section-1">
-			<div class="ccontainer">
-				<h2>Hibiki, The Girl of Wonders</h2>
-				<h3>Once you fall into the hole, you're never gonna fall out. Honestly though, is it really a hole?</h3>
-				<p>The whole point of loving Hibiki as your waifu is to be able to adore her marvelous glory and be glad that she exists.</p>
-			</div>
-		</div>
-		<div class="section-divider" id="section-divider-1">
-			<div class="ccontainer">
-				<h1>Hibiki's Cuteness</h1>
-			</div>
-		</div>
-		<div class="section" id="section-cuteness">
-			<div class="ccontainer">
-				<h2>Hibiki, A Bundle of Cuteness</h2>
-				<h3>Whenever you glance at Hibiki, you can't help, but give into her beauty.</h3>
-				<p>A sub character that is this cute truly represents what a true waifu should be like and should represent. </p>
-			</div>
-		</div>
-		<div class="section-content" id="section-cuteness-content">
-			<div class="ccontainer">
-				<h2>Her cuteness is on another level to the point where she is the paired word to the definition of perfect.</h2>
-				<div class="img-container">
-					<img src="css/imgs/searchbarhibiki.jpg" />
-				</div>
-				<div class="img-container">
-					<img src="css/imgs/perfect.jpg" />
-				</div>
-			</div>
-		</div>
-		<div class="section-divider" id="section-divider-2">
-			<div class="ccontainer">
-				<h1>Hibiki's Color</h1>
-			</div>
-		</div>
-		<div class="section" id="section-color">
-			<div class="ccontainer">
-				<h2>Hibiki, That Blue Hair UwU</h2>
-				<h3>The Idea of that shade of blue for your hair is just so appealing.</h3>
-				<p>Sometimes, the slight suttle shade of color clearly represents here slient tone and shows how nice she is as a waifu.</p>
-			</div>
-		</div>
-		<div class="section-content" id="section-color-content">
-			<div class="ccontainer">
-				<h2>Like Honestly... Look at that hair!</h2>
-				<div class="img-container">
-					<img src="css/imgs/sectionhibiki1.jpg" height="600" width="400"/>
-				</div>
-			</div>
-		</div>
-		<div class="section-divider" id="section-divider-3">
-			<div class="ccontainer">
-				<h1>Hibiki's Voice</h1>
-			</div>
-		</div>
-		<div class="section" id="section-voice">
-			<div class="ccontainer">
-				<h2>Hibiki, Her Soft, Sweet Voice</h2>
-				<h3>The soothing sounds of Hibiki's voice are always worth listening to.</h3>
-				<p>Knowing that you can get constant ASMR from your waifu is just great. A character of such caliber is worth admiring</p>
-			</div>
-		</div>
-		<div class="section-content" id="section-voice-content">
-			<div class="ccontainer">
-				<h2>Hibiki's visual is just on another level as shown below:</h2>
-				<div class="container-img">
-					<div class="img-container">
-						<img src="css/imgs/hbk1.jpg" height="600" width="400"/>
-					</div>
-					<div class="img-container">
-						<img src="css/imgs/hbk2.jpg" height="600" width="400"/>
-					</div>
-					<div class="img-container">
-						<img src="css/imgs/hbk3.jpg" height="600" width="400"/>
-					</div>
-					<div class="img-container">
-						<img src="css/imgs/hbk4.jpg" height="600" width="400"/>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="section" id="title-section-2">
-			<div class="ccontainer">
-				<h2>In Conclusion,</h2>
-				<h3>Hibiki should be your waifu!</h3>
-			</div>
-		</div>
-		<footer class="page-footer blue lighten-5">
-			<div class="container">
-				<div class="row">
-					<div class="col l6 s12">
-						<h5 class="light-blue-text text-darken-4">Hibiki Paradise</h5>
-						<p class="light-blue-text text-darken-4">By: Jadefen Midori</p>
-					</div>
-				</div>
-			</div>
-			<div class="footer-copyright">
-				<div class="container light-blue-text text-darken-4">
-					&#169; 2019 Copyright Text
-				</div>
-			</div>
-		</footer>
-		<!--JavaScript at end of body for optimized loading-->
-	<script type="text/javascript" src="js/materialize.min.js"></script>
+    <header>
+        <div class="container">
+            <div id="branding">
+                <h1><span class="hilight">Jadefen Midori's</span> Informational Website</h1>
+            </div>
+            <nav id="header-menu">
+                <ul>
+                    <li class="current"><a href="index.html">Home</a></li>
+                    <li><a href="about-me.html">About Me</a></li>
+                    <li><a href="kpop.html">K-Pop</a></li>
+                    <li><a href="anime.html">Anime</a></li>
+                    <li><a href="arcade.html">Arcade</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <section class="showcase" id="titleshowcase">
+        <div class="container">
+            <h1>Everything About Jadefen Midori</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean feugiat cursus sapien non volutpat. Pellentesque facilisis blandit molestie. Donec interdum vestibulum nisi ut luctus. </p>
+        </div>
+    </section>
+
+    <section id="welcome-message">
+        <div class="container">
+            <h2>Welcome To My Website!</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean feugiat cursus sapien non volutpat. Pellentesque facilisis blandit molestie. Donec interdum vestibulum nisi ut luctus. Etiam cursus gravida augue sit amet egestas. Cras quis mauris magna. In porttitor urna vitae leo efficitur, eu dignissim eros condimentum. Morbi euismod venenatis quam, vitae interdum ipsum vulputate vel. Donec tincidunt mollis urna, id mollis dolor porta in. Aenean vehicula felis eget est ultricies, a cursus leo egestas. Aenean tristique finibus lacus, at consectetur nisi vehicula at. Morbi consequat eget erat vel consequat. Suspendisse rhoncus orci elit, nec tincidunt massa faucibus mattis. Nam neque eros, feugiat ac urna a, ornare tincidunt lorem.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean feugiat cursus sapien non volutpat. Pellentesque facilisis blandit molestie. Donec interdum vestibulum nisi ut luctus. Etiam cursus gravida augue sit amet egestas. Cras quis mauris magna. In porttitor urna vitae leo efficitur, eu dignissim eros condimentum. Morbi euismod venenatis quam, vitae interdum ipsum vulputate vel. Donec tincidunt mollis urna, id mollis dolor porta in. Aenean vehicula felis eget est ultricies, a cursus leo egestas. Aenean tristique finibus lacus, at consectetur nisi vehicula at. Morbi consequat eget erat vel consequat.</p>
+        </div>
+    </section>
+
+    <section class="showcase" id="quoteshowcase-1">
+        <div class="container">
+            <h1>"I don't wanna brag or anything, but when it comes to being the worst - I'm at the top."</h1>
+            <h2>- Rider Astolfo</h2>
+        </div>
+    </section>
+
+    <section id="directory">
+        <div class="container">
+            <h2>Directory</h2>
+            <div class="box-1">
+                <img src="./imgs/dahyun.jpg" />
+                <h3>K-Pop</h3>
+                <p>Aliquam erat volutpat. Nulla facilisi. Proin vel consequat purus. In dictum ante quam, et mattis urna blandit id. Sed commodo eros eget sem blandit, non consequat lorem fermentum. Curabitur eleifend tellus a euismod mattis.</p>
+            </div>
+            <div class="box-1">
+                <img src="./imgs/deku.jpg" />
+                <h3>Anime</h3>
+                <p>Aliquam erat volutpat. Nulla facilisi. Proin vel consequat purus. In dictum ante quam, et mattis urna blandit id. Sed commodo eros eget sem blandit, non consequat lorem fermentum. Curabitur eleifend tellus a euismod mattis.</p>
+            </div>
+            <div class="box-1">
+                <img src="./imgs/diva.jpg" />
+                <h3>Arcade</h3>
+                <p>Aliquam erat volutpat. Nulla facilisi. Proin vel consequat purus. In dictum ante quam, et mattis urna blandit id. Sed commodo eros eget sem blandit, non consequat lorem fermentum. Curabitur eleifend tellus a euismod mattis.</p>
+            </div>
+            <div class="box-1">
+                <img src="./imgs/bookstack.jpg" />
+                <h3>Blog</h3>
+                <p>Aliquam erat volutpat. Nulla facilisi. Proin vel consequat purus. In dictum ante quam, et mattis urna blandit id. Sed commodo eros eget sem blandit, non consequat lorem fermentum. Curabitur eleifend tellus a euismod mattis.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="showcase" id="quoteshowcase-2">
+        <div class="container">
+            <h1>"Clumsy is sexy."</h1>
+            <h2>- Konata Izumi</h2>
+        </div>
+    </section>
+
+    <section id="social">
+        <div class="container">
+            <h2>Social Media</h2>
+            <div class="box-2">
+                <a href="https://www.twitter.com/jadefen1" target="_blank"><img src="./imgs/twitter.png" /></a>
+                <h3>Twitter</h3>
+                <p>Aliquam erat volutpat. Nulla facilisi. Proin vel consequat purus. In dictum ante quam, et mattis urna blandit id. Sed commodo eros eget sem blandit, non consequat lorem fermentum. Curabitur eleifend tellus a euismod mattis.</p>
+            </div>
+            <div class="box-2">
+                <a href="https://curiouscat.me/JFMidori" target="_blank"><img src="./imgs/curiouscat.png" /></a>
+                <h3>CuriousCat</h3>
+                <p>Aliquam erat volutpat. Nulla facilisi. Proin vel consequat purus. In dictum ante quam, et mattis urna blandit id. Sed commodo eros eget sem blandit, non consequat lorem fermentum. Curabitur eleifend tellus a euismod mattis.</p>
+            </div>
+            <div class="box-2">
+                <a href="https://www.facebook.com/profile.php?id=100011295079343" target="_blank"><img src="./imgs/facebook.png" /></a>
+                <h3>Facebook</h3>
+                <p>Aliquam erat volutpat. Nulla facilisi. Proin vel consequat purus. In dictum ante quam, et mattis urna blandit id. Sed commodo eros eget sem blandit, non consequat lorem fermentum. Curabitur eleifend tellus a euismod mattis.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="showcase" id="quoteshowcase-3">
+        <div class="container">
+            <h1>"The world’s not perfect, but it’s there for us trying the best it can. That’s what makes it so damn beautiful."</h1>
+            <h2>- Roy Mustang</h2>
+        </div>
+    </section>
+
+    <section id="blog-updates">
+        <div class="container">
+            <h1>Blog Updates! Subscribe to get notified when I update my blog!</h1>
+            <form>
+                <input type="email" placeholder="Enter Email" />
+                <button type="submit" class="button-1">Subscribe</button>
+            </form>
+        </div>
+    </section>
+
+    <footer>
+        <p>Jadefen Midori, Copyright &copy; 2019</p>
+    </footer>
 </body>
 </html>
